--- a/hello.htm
+++ b/hello.htm
@@ -4,6 +4,6 @@
 	</head>
 		<body>
 			<h1>Hello, World</h1>
-			<!-- This is an unwanted but committed change -->
+			<a href=”Krasnopeeva.htm”>Krasnopeeva</a>.
 		</body>
 </html>
